--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -269,11 +269,15 @@
     "import numpy as np\n",
     "import networkx as nx\n",
     "\n",
-    "I = np.array([[1, 0, 0, 0, 0],\n",
-    "              [0, 1, 0, 0, 0],\n",
-    "              [0, 1, 0, 0, 0],\n",
-    "              [0, 0, 1, 1, 0],\n",
-    "              [0, 0, 0, 1, 1]])\n",
+    "I = np.array(\n",
+    "    [\n",
+    "        [1, 0, 0, 0, 0],\n",
+    "        [0, 1, 0, 0, 0],\n",
+    "        [0, 1, 0, 0, 0],\n",
+    "        [0, 0, 1, 1, 0],\n",
+    "        [0, 0, 0, 1, 1],\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "(rows, cols) = np.nonzero(I)\n",
     "\n",
@@ -318,7 +322,7 @@
     }
    ],
    "source": [
-    "list(nx.dfs_preorder_nodes(G, (0,0)))"
+    "list(nx.dfs_preorder_nodes(G, (0, 0)))"
    ]
   }
  ],
