--- a/notebooks_and_scripts/test_objected_oriented_goodwin_creek_3_reaches.ipynb
+++ b/notebooks_and_scripts/test_objected_oriented_goodwin_creek_3_reaches.ipynb
@@ -12,7 +12,7 @@
     "# from t2c import Watershed, CrossSection\n",
     "# from topagnps2cche1d import Watershed, CrossSection\n",
     "\n",
-    "casename = 'goodwin_creek_1m_3_Reach_Station_12'\n",
+    "casename = \"goodwin_creek_1m_3_Reach_Station_12\"\n",
     "\n",
     "root_dir = Path(f\"../data_inputs/{casename}/TopAGNPS_DataSets/3_Reach\")\n",
     "# root_dir = Path(\"../data_inputs/goodwin_creek_1m_1_and_3_reaches/TopAGNPS_DataSets/3_Reach\")\n",
@@ -107,14 +107,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "casename_strahler_step = f\"{casename}_strahler_gt{strahler}_step_{step}m\"\n",
     "\n",
     "# step = \"native_\"\n",
     "# strahler = 0\n",
     "# casename = f\"ohio_strahler_gt{strahler}_step_{step}m\"\n",
     "watershed.write_cche1d_dat_files(\n",
-    "    casename=casename_strahler_step, output_folder=f\"./../data_outputs/{casename_strahler_step}\"\n",
+    "    casename=casename_strahler_step,\n",
+    "    output_folder=f\"./../data_outputs/{casename_strahler_step}\",\n",
     ")"
    ]
   },
